<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".complete_profile_Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Taxigo.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EFC41A"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/textcolor"
            app:expandedTitleTextColor="@color/textcolor"
            app:title="@string/complete_profile"
            app:contentScrim="#EFC41A"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/user_icon"
                app:layout_collapseMode="parallax"
                app:tint="#6AF4FF81" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.Taxigo.PopupOverlay">
                <ImageView
                    android:id="@+id/completeprofileback"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/arrow_back_icon" />


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:textStyle="bold"
                android:text="@string/whats_s_pending"
                android:textColor="@color/textcolor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="@color/hintcolor"
                android:padding="4dp"
                android:text="@string/email_address"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="@color/hintcolor"
                android:padding="4dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="@color/hintcolor"
                android:padding="4dp"
                android:text="@string/add_a_payment_method"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="@color/hintcolor"
                android:padding="4dp"
                android:text="@string/home_location"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="@color/hintcolor"
                android:padding="4dp"
                android:text="@string/work_location"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="@color/hintcolor"
                android:padding="4dp"
                android:text="@string/emergency_contacts"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/hintcolor"
                android:textSize="14sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/hintcolor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableTint="@color/hintcolor"
                android:padding="4dp"
                android:text="@string/completed"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="#18831D"
                android:padding="4dp"
                android:text="@string/sign_up"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/hintcolor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="#18831D"
                android:padding="4dp"
                android:text="@string/name"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/hintcolor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:drawableTint="#18831D"
                android:padding="4dp"
                android:text="@string/book_yout_first_ride"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/hintcolor"
                android:textSize="16sp" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>