<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Auto_fragment_claims">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:src="@drawable/imagebikeperson" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DDDDDD"
                android:padding="15dp"
                android:gravity="center"
                android:layout_margin="20dp"
                android:text="@string/for_taxigo_auto_accident_claim_or_any_question_regarding_it_please_write_a_mail_to_shoutout_taxigo_bike"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:gravity="center"
                android:layout_margin="20dp"
                android:text="@string/we_will_do_our_best_to_resolve_your_issue_our_support_team_is_here_for_you_drop_us_a_mail"
                android:textColor="#7A7777"
                android:textSize="11sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/emailredirect"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/black"
                app:cardCornerRadius="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/email_us"
                    android:layout_margin="10dp"
                    android:src="@drawable/treatment_icon"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:textColor="#FFEE54" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>